--- a/frontend/index.html
+++ b/frontend/index.html
@@ -399,7 +399,7 @@
       <h1>Department of Computer Science & Engineering</h1>
       <h2>University of Global Village</h2>
     </div>
-    <img src="images/cse_logo.png" alt="CSE Logo" class="logo">
+    <!-- <img src="images/cse_logo.png" alt="CSE Logo" class="logo"> -->
   </header>
 
   <div id="grid" class="grid"></div>
