--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,14 +23,14 @@
     header {
       background: radial-gradient(circle at 60% 40%, #2563eb 0%, #1e3a8a 100%);
       color: #fff;
-      padding: 0.7em 2vw;
+      padding: 0.5em 2vw;
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
 
     .logo {
-      height: 7.5vh;
+      height: 6vh;
       border-radius: 5px;
       background: #fff;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .10);
@@ -46,14 +46,14 @@
 
     .header-center h1 {
       margin: 0;
-      font-size: 3.5vh;
+      font-size: 2.8vh;
       font-weight: 700;
       text-shadow: 1px 1px 2px #00000077;
     }
 
     .header-center h2 {
       margin: 0;
-      font-size: 3vh;
+      font-size: 2.4vh;
       font-weight: 500;
       text-shadow: 1px 1px 2px #00000055;
     }
@@ -61,8 +61,8 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-      gap: 1vh;
+      grid-auto-rows: 1fr;
+      gap: 0.7vh;
       padding: 1vh 2vw;
       box-sizing: border-box;
       overflow: visible;
@@ -72,7 +72,7 @@
 
     .card {
       background: #fff;
-      border-radius: 18px;
+      border-radius: 14px;
       box-shadow: 0 8px 28px -6px rgba(16, 34, 74, .14), 0 4px 12px -4px rgba(16, 34, 74, .12);
       color: #1e3a8a;
       font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
@@ -84,7 +84,7 @@
       overflow: hidden;
       word-break: break-word;
       box-sizing: border-box;
-      padding: 1vh 0.5vw;
+      padding: 0.7vh 0.4vw;
       contain: layout style;
     }
 
@@ -92,8 +92,8 @@
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .10);
       border: 2px solid #2563eb;
-      width: 6vh;
-      height: 6vh;
+      width: 5vh;
+      height: 5vh;
       object-fit: cover;
       margin-bottom: 0.5vh;
     }
@@ -199,10 +199,10 @@
       transform: scale(1.1);
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 700px) {
       .grid {
         grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-        grid-template-rows: auto;
+        grid-auto-rows: auto;
       }
     }
 
@@ -478,6 +478,17 @@
 
             const grid = document.getElementById("grid");
             const fragment = document.createDocumentFragment();
+
+            // Dynamic column calculation based on faculty count
+            const facultyCount = sortedData.length;
+            let columns = 5; // Default for ≤15 faculty
+            if (facultyCount > 15 && facultyCount <= 24) {
+              columns = 6;
+            } else if (facultyCount > 24) {
+              columns = 6; // Max 6 columns for >24
+              console.warn(`⚠️ ${facultyCount} faculty members may exceed optimal display capacity (24)`);
+            }
+            grid.style.gridTemplateColumns = `repeat(${columns}, 1fr)`;
 
             sortedData.forEach(f => {
               let statusObj = f.manualOverride ?? f.status;
