--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,8 @@
       justify-content: space-around;
       font-size: 1.6vh;
       overflow: hidden;
-      word-break: break-word;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
       box-sizing: border-box;
       padding: 0.7vh 0.4vw;
       contain: layout style;
@@ -102,6 +103,11 @@
       color: #2563eb;
       font-weight: 600;
       margin-bottom: 0.1em;
+      text-align: center;
+      width: 100%;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
     }
 
     .card div,
@@ -109,6 +115,39 @@
     .status {
       color: #374151;
       font-weight: 500;
+      text-align: center;
+      width: 100%;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+    }
+
+    .card .designation {
+      font-size: 0.9em;
+      line-height: 1.2;
+      max-width: 100%;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
+    }
+
+    .card .contact-info {
+      font-size: 0.85em;
+      line-height: 1.3;
+      max-width: 100%;
+      overflow-wrap: anywhere;
+      word-break: break-all;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.3em;
+    }
+
+    .card .contact-info span {
+      overflow-wrap: anywhere;
+      word-break: break-all;
+      min-width: 0;
+      flex: 1;
     }
 
     .status {
@@ -514,9 +553,9 @@
               cardDiv.innerHTML = `
                 <img src="https://faculty-status-display.onrender.com${f.image}" alt="${f.name}">
                 <h3>${f.name}</h3>
-                <div>${f.designation || ""}</div>
-                <div>${f.contact ? `<svg class="icon-phone" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg> ${f.contact}` : ""}</div>
-                <div>${f.email ? `<svg class="icon-email" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg> ${f.email}` : ""}</div>
+                <div class="designation">${f.designation || ""}</div>
+                <div class="contact-info">${f.contact ? `<svg class="icon-phone" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg> <span>${f.contact}</span>` : ""}</div>
+                <div class="contact-info">${f.email ? `<svg class="icon-email" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg> <span>${f.email}</span>` : ""}</div>
                 <div class="status ${statusStr}">
                   ${STATUS_MAP[statusStr] || statusStr} ${extraInfo}
                 </div>
