--- a/frontend/index.html
+++ b/frontend/index.html
@@ -221,21 +221,9 @@
 
     .icon-phone,
     .icon-email {
-      width: 1.4em;
-      height: 1.4em;
-      vertical-align: middle;
-      margin-right: 0.4em;
+      font-size: 1em;
       color: #2563eb;
-      background: rgba(37, 99, 235, 0.1);
-      border-radius: 50%;
-      padding: 0.2em;
-      transition: all 0.2s ease;
-    }
-
-    .icon-phone:hover,
-    .icon-email:hover {
-      background: rgba(37, 99, 235, 0.2);
-      transform: scale(1.1);
+      flex-shrink: 0;
     }
 
     @media (max-width: 700px) {
@@ -554,8 +542,8 @@
                 <img src="https://faculty-status-display.onrender.com${f.image}" alt="${f.name}">
                 <h3>${f.name}</h3>
                 <div class="designation">${f.designation || ""}</div>
-                <div class="contact-info">${f.contact ? `<svg class="icon-phone" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg> <span>${f.contact}</span>` : ""}</div>
-                <div class="contact-info">${f.email ? `<svg class="icon-email" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg> <span>${f.email}</span>` : ""}</div>
+                <div class="contact-info">${f.contact ? `<i class="fas fa-phone icon-phone"></i><span>${f.contact}</span>` : ""}</div>
+                <div class="contact-info">${f.email ? `<i class="fas fa-envelope icon-email"></i><span>${f.email}</span>` : ""}</div>
                 <div class="status ${statusStr}">
                   ${STATUS_MAP[statusStr] || statusStr} ${extraInfo}
                 </div>
