--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,21 +133,20 @@
     .card .contact-info {
       font-size: 0.85em;
       line-height: 1.3;
-      max-width: 100%;
-      overflow-wrap: anywhere;
-      word-break: break-all;
+      width: 100%;
       text-align: center;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 0.3em;
+      padding: 0 0.2em;
     }
 
     .card .contact-info span {
-      overflow-wrap: anywhere;
-      word-break: break-all;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
       min-width: 0;
-      flex: 1;
+      max-width: 100%;
     }
 
     .status {
@@ -224,6 +223,9 @@
       font-size: 1em;
       color: #2563eb;
       flex-shrink: 0;
+      display: inline-block;
+      width: 1em;
+      text-align: center;
     }
 
     @media (max-width: 700px) {
