--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,8 +82,6 @@
       justify-content: space-around;
       font-size: 1.6vh;
       overflow: hidden;
-      overflow-wrap: break-word;
-      word-wrap: break-word;
       box-sizing: border-box;
       padding: 0.7vh 0.4vw;
       contain: layout style;
@@ -117,8 +115,6 @@
       font-weight: 500;
       text-align: center;
       width: 100%;
-      overflow-wrap: break-word;
-      word-wrap: break-word;
     }
 
     .card .designation {
@@ -136,17 +132,21 @@
       width: 100%;
       text-align: center;
       display: flex;
+      flex-direction: row;
       align-items: center;
       justify-content: center;
       gap: 0.3em;
       padding: 0 0.2em;
+      white-space: normal;
     }
 
     .card .contact-info span {
       overflow-wrap: break-word;
       word-wrap: break-word;
+      word-break: normal;
       min-width: 0;
       max-width: 100%;
+      white-space: normal;
     }
 
     .status {
