--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,20 +132,20 @@
     .card .contact-info {
       font-size: 0.75em;
       line-height: 1.2;
-      width: 95%;
+      width: 100%;
       text-align: center;
-      display: inline-flex;
+      display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: center;
       gap: 0.3em;
+      padding: 0 0.2em;
+      box-sizing: border-box;
     }
 
     .card .contact-info span {
-      max-width: 90%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+      display: inline-block;
+      max-width: 80%;
     }
 
     .status {
