--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,8 +130,8 @@
     }
 
     .card .contact-info {
-      font-size: 0.72em;
-      line-height: 1.2;
+      font-size: 0.7em;
+      line-height: 1.3;
       width: 100%;
       text-align: center;
       display: flex;
@@ -141,14 +141,14 @@
       gap: 0.3em;
       padding: 0 0.2em;
       box-sizing: border-box;
+      flex-wrap: wrap;
     }
 
     .card .contact-info span {
-      flex: 1;
+      flex: 0 1 auto;
       min-width: 0;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
 
     .status {
