--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,12 +79,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      gap: 0.2vh;
+      justify-content: center;
+      gap: 0.15vh;
       font-size: 1.5vh;
       overflow: hidden;
       box-sizing: border-box;
-      padding: 0.5vh 0.5vw;
+      padding: 0.6vh 0.5vw;
       contain: layout style;
     }
 
@@ -92,23 +92,23 @@
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .10);
       border: 2px solid #2563eb;
-      width: 4.5vh;
-      height: 4.5vh;
+      width: 5.5vh;
+      height: 5.5vh;
       object-fit: cover;
-      margin-bottom: 0.2vh;
+      margin-bottom: 0.3vh;
     }
 
     .card h3 {
       color: #2563eb;
       font-weight: 600;
-      margin: 0;
+      margin: 0.2vh 0;
       text-align: center;
       width: 100%;
       overflow-wrap: break-word;
       word-wrap: break-word;
       hyphens: auto;
       font-size: 1.05em;
-      line-height: 1.2;
+      line-height: 1.15;
     }
 
     .card div,
@@ -122,19 +122,18 @@
     }
 
     .card .designation {
-      font-size: 0.85em;
+      font-size: 0.82em;
       line-height: 1.1;
       max-width: 100%;
       overflow-wrap: break-word;
       word-wrap: break-word;
       hyphens: auto;
-      margin: 0;
-      padding: 0.1em 0;
+      margin: 0.1vh 0;
     }
 
     .card .contact-info {
-      font-size: 0.75em;
-      line-height: 1.15;
+      font-size: 0.72em;
+      line-height: 1.1;
       width: 100%;
       text-align: center;
       display: flex;
@@ -142,9 +141,9 @@
       align-items: center;
       justify-content: center;
       gap: 0.3em;
-      padding: 0.05em 0.2em;
       box-sizing: border-box;
       flex-wrap: wrap;
+      margin: 0.05vh 0;
     }
 
     .card .contact-info span {
@@ -157,12 +156,12 @@
 
     .status {
       border-radius: 8px;
-      padding: 0.25em 0.6em;
-      font-size: 0.9em;
+      padding: 0.3em 0.6em;
+      font-size: 0.88em;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .08);
       display: inline-block;
-      margin-top: 0.15em;
-      line-height: 1.2;
+      margin-top: 0.3vh;
+      line-height: 1.15;
     }
 
     .status.in_class {
@@ -228,13 +227,12 @@
 
     .icon-phone,
     .icon-email {
-      font-size: 0.95em;
+      font-size: 1em;
       color: #2563eb;
       flex-shrink: 0;
-      display: inline-block;
-      width: auto;
-      text-align: center;
-      line-height: 1;
+      font-style: normal;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
 
     @media (max-width: 700px) {
