--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,8 +62,8 @@
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       grid-auto-rows: 1fr;
-      gap: 0.7vh;
-      padding: 1vh 2vw;
+      gap: 1vh;
+      padding: 1.2vh 2vw;
       box-sizing: border-box;
       overflow: visible;
       contain: layout style;
@@ -80,11 +80,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 0.15vh;
-      font-size: 1.5vh;
+      gap: 0.4vh;
+      font-size: 1.8vh;
       overflow: hidden;
       box-sizing: border-box;
-      padding: 0.6vh 0.5vw;
+      padding: 1vh 0.8vw;
       contain: layout style;
     }
 
@@ -92,23 +92,23 @@
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .10);
       border: 2px solid #2563eb;
-      width: 5.5vh;
-      height: 5.5vh;
+      width: 7vh;
+      height: 7vh;
       object-fit: cover;
-      margin-bottom: 0.3vh;
+      margin-bottom: 0.5vh;
     }
 
     .card h3 {
       color: #2563eb;
       font-weight: 600;
-      margin: 0.2vh 0;
+      margin: 0.3vh 0;
       text-align: center;
       width: 100%;
       overflow-wrap: break-word;
       word-wrap: break-word;
       hyphens: auto;
-      font-size: 1.05em;
-      line-height: 1.15;
+      font-size: 1.08em;
+      line-height: 1.2;
     }
 
     .card div,
@@ -122,28 +122,28 @@
     }
 
     .card .designation {
-      font-size: 0.82em;
-      line-height: 1.1;
+      font-size: 0.88em;
+      line-height: 1.2;
       max-width: 100%;
       overflow-wrap: break-word;
       word-wrap: break-word;
       hyphens: auto;
-      margin: 0.1vh 0;
+      margin: 0.2vh 0;
     }
 
     .card .contact-info {
-      font-size: 0.72em;
-      line-height: 1.1;
+      font-size: 0.78em;
+      line-height: 1.3;
       width: 100%;
       text-align: center;
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: center;
-      gap: 0.3em;
+      gap: 0.4em;
       box-sizing: border-box;
       flex-wrap: wrap;
-      margin: 0.05vh 0;
+      margin: 0.15vh 0;
     }
 
     .card .contact-info span {
@@ -156,12 +156,12 @@
 
     .status {
       border-radius: 8px;
-      padding: 0.3em 0.6em;
-      font-size: 0.88em;
+      padding: 0.4em 0.7em;
+      font-size: 0.92em;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .08);
       display: inline-block;
-      margin-top: 0.3vh;
-      line-height: 1.15;
+      margin-top: 0.4vh;
+      line-height: 1.2;
     }
 
     .status.in_class {
@@ -556,8 +556,8 @@
                 <img src="https://faculty-status-display.onrender.com${f.image}" alt="${f.name}">
                 <h3>${f.name}</h3>
                 <div class="designation">${f.designation || ""}</div>
-                <div class="contact-info">${f.contact ? `<i class="fas fa-phone icon-phone"></i><span>${f.contact}</span>` : ""}</div>
-                <div class="contact-info">${f.email ? `<i class="fas fa-envelope icon-email"></i><span>${f.email}</span>` : ""}</div>
+                <div class="contact-info"><i class="fa fa-phone icon-phone"></i><span>${f.contact}</span></div>
+                <div class="contact-info"><i class="fa fa-envelope icon-email"></i><span>${f.email}</span></div>
                 <div class="status ${statusStr}">
                   ${STATUS_MAP[statusStr] || statusStr} ${extraInfo}
                 </div>
