--- a/frontend/index.html
+++ b/frontend/index.html
@@ -155,8 +155,8 @@
     }
 
     .status {
-      border-radius: 8px;
-      padding: 0.4em 0.7em;
+      border-radius: 20px;
+      padding: 0.4em 0.8em;
       font-size: 0.92em;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .08);
       display: inline-block;
@@ -167,14 +167,14 @@
     .status.in_class {
       background: #e0e7ff;
       color: #2563eb;
-      border-radius: 8px;
+      border-radius: 20px;
       font-weight: 600;
     }
 
     .status.at_dept {
       background: #d1fae5;
       color: #059669;
-      border-radius: 8px;
+      border-radius: 20px;
       font-weight: 600;
     }
 
@@ -182,14 +182,14 @@
     .status.exam_duty {
       background: #fef3c7;
       color: #b45309;
-      border-radius: 8px;
+      border-radius: 20px;
       font-weight: 600;
     }
 
     .status.on_leave {
       background: #fee2e2;
       color: #dc2626;
-      border-radius: 8px;
+      border-radius: 20px;
       font-weight: 600;
     }
 
@@ -197,21 +197,21 @@
     .status.on_break {
       background: #e5e7eb;
       color: #374151;
-      border-radius: 8px;
+      border-radius: 20px;
       font-weight: 600;
     }
 
     .status.on_weekend {
       background: #ffe4e6;
       color: #be123c;
-      border-radius: 8px;
+      border-radius: 20px;
       font-weight: 600;
     }
 
     .status.postponed {
       background: #fecaca;
       color: #991b1b;
-      border-radius: 8px;
+      border-radius: 20px;
       font-weight: 600;
     }
 
@@ -556,8 +556,8 @@
                 <img src="https://faculty-status-display.onrender.com${f.image}" alt="${f.name}">
                 <h3>${f.name}</h3>
                 <div class="designation">${f.designation || ""}</div>
-                <div class="contact-info"><i class="fa fa-phone icon-phone"></i><span>${f.contact}</span></div>
-                <div class="contact-info"><i class="fa fa-envelope icon-email"></i><span>${f.email}</span></div>
+                <div class="contact-info"><i class="fa-solid fa-phone icon-phone"></i><span>${f.contact}</span></div>
+                <div class="contact-info"><i class="fa-solid fa-envelope icon-email"></i><span>${f.email}</span></div>
                 <div class="status ${statusStr}">
                   ${STATUS_MAP[statusStr] || statusStr} ${extraInfo}
                 </div>
