--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,11 +80,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 0.35vh;
+      gap: 0.5vh;
       font-size: 1.85vh;
       overflow: hidden;
       box-sizing: border-box;
-      padding: 0.9vh 0.7vw;
+      padding: 1.1vh 0.7vw;
       contain: layout style;
     }
 
@@ -92,23 +92,23 @@
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .10);
       border: 2px solid #2563eb;
-      width: 7vh;
-      height: 7vh;
+      width: 7.2vh;
+      height: 7.2vh;
       object-fit: cover;
-      margin-bottom: 0.4vh;
+      margin-bottom: 0.5vh;
     }
 
     .card h3 {
       color: #2563eb;
       font-weight: 600;
-      margin: 0.25vh 0;
+      margin: 0.3vh 0 0.4vh 0;
       text-align: center;
       width: 100%;
       overflow-wrap: break-word;
       word-wrap: break-word;
       hyphens: auto;
       font-size: 1.08em;
-      line-height: 1.2;
+      line-height: 1.25;
     }
 
     .card div,
@@ -123,17 +123,17 @@
 
     .card .designation {
       font-size: 0.86em;
-      line-height: 1.2;
+      line-height: 1.3;
       max-width: 100%;
       overflow-wrap: break-word;
       word-wrap: break-word;
       hyphens: auto;
-      margin: 0.15vh 0;
+      margin: 0.2vh 0 0.3vh 0;
     }
 
     .card .contact-info {
       font-size: 0.78em;
-      line-height: 1.25;
+      line-height: 1.35;
       width: 100%;
       text-align: center;
       display: flex;
@@ -143,7 +143,7 @@
       gap: 0.35em;
       box-sizing: border-box;
       flex-wrap: wrap;
-      margin: 0.1vh 0;
+      margin: 0.2vh 0;
     }
 
     .card .contact-info span {
@@ -156,12 +156,12 @@
 
     .status {
       border-radius: 30px;
-      padding: 0.4em 0.85em;
+      padding: 0.45em 0.85em;
       font-size: 0.9em;
       box-shadow: 0 2px 8px rgba(16, 34, 74, .08);
       display: inline-block;
-      margin-top: 0.35vh;
-      line-height: 1.2;
+      margin-top: 0.4vh;
+      line-height: 1.25;
     }
 
     .status.in_class {
